# miniforte

./: .travis.yml  CMakeLists.txt  mf.py
src/: miniforte.cc  myclass.cc  myclass.h
